--- a/chessboard/css/chessboard.css
+++ b/chessboard/css/chessboard.css
@@ -39,6 +39,12 @@
     font-size: 2.5ch;
     width: 22px;
     height: 22px;
+    transition: all 0.3s ease-in-out;
+}
+
+.piece:hover {
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 .piece.white {
