--- a/chessboard/css/style.css
+++ b/chessboard/css/style.css
@@ -20,3 +20,8 @@ div.board {
     display: flex;
     flex-direction: row;
 }
+
+div.axe {
+    font-size: 20px;
+    border: 1px solid rgba(0,0,0,0);
+}
