--- a/chessboard/css/chessboard.css
+++ b/chessboard/css/chessboard.css
@@ -1,10 +1,3 @@
-.marking {
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-    height: 30px;
-    background: linear-gradient(45deg, #f0d9b5, #b58863);
-}
 .board {
     flex-wrap: wrap;
     width: 270px;
@@ -21,6 +14,21 @@
     justify-content: center;
 }
 
+.marking {
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    background: linear-gradient(45deg, #f0d9b5, #b58863);
+    font-family: Georgia;
+}
+
+.marking:hover {
+    cursor: pointer;
+    transform: scale(1.3);
+    background: linear-gradient(45deg, cornsilk, brown);
+}
+
 .square {
     width: 30px;
     height: 30px;
@@ -29,7 +37,7 @@
 
 .square:hover {
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.3);
 }
 
 .square.black {
