--- a/chessboard/css/style.css
+++ b/chessboard/css/style.css
@@ -1,14 +1,11 @@
-/* Общие стили для страницы */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f0f0f0;
 }
-
-/* Стили для шахматной доски */
 .chessboard {
-    width: 400px; /* Измените размеры по вашему усмотрению */
+    width: 400px;
     margin: 50px auto;
     position: relative;
 }
@@ -25,7 +22,6 @@ body {
     justify-content: center;
 }
 
-/* Стили для координат */
 .coordinates {
     display: flex;
     justify-content: space-between;
@@ -45,8 +41,6 @@ body {
 .clear {
     clear: both;
 }
-
-/* Стили для черных и белых клеток */
 .white {
     background-color: #f3e6ab;
 }
@@ -54,8 +48,6 @@ body {
 .black {
     background-color: #fdcc45;
 }
-
-/* Стили для фигур */
 .cell img {
     max-width: 100%;
     max-height: 100%;
